Ensure correct aspect ratio on mobile/tablet

--- a/site/web/app/themes/buzzeasy/assets/sass/components/_benefits.scss
+++ b/site/web/app/themes/buzzeasy/assets/sass/components/_benefits.scss
@@ -22,7 +22,7 @@
         background-size: cover;
         background-position: center center;
         padding-top: $half-spacing-unit;
-        padding-bottom: $double-spacing-unit;
+        padding-bottom: 2 * $double-spacing-unit;
     }
 }
 
